# nitroshare-desktop

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  nitroshare.pri  nitroshare.pro  resources.qrc
cli/: CMakeLists.txt  main.cpp  signal.cpp
client/: CMakeLists.txt  main.cpp
common/: CMakeLists.txt  signal.h
common/src/: init.cpp  signal.cpp
daemon/: CMakeLists.txt  config.h.in  main.cpp
libnitroshare/: CMakeLists.txt  config.h.in
libnitroshare/doc/: CMakeLists.txt  Doxyfile.in  index.md  overrides.css
libnitroshare/tests/: CMakeLists.txt  TestDeviceModel.cpp  TestFileUtil.cpp  TestJsonUtil.cpp  TestLogger.cpp  TestPluginModel.cpp  TestSettings.cpp  TestSettingsRegistry.cpp  TestTransfer.cpp
nmh/: CMakeLists.txt  main.cpp
plugins/: CMakeLists.txt
plugins/about/: CMakeLists.txt  about.json.in  aboutaction.cpp  aboutaction.h  aboutdialog.cpp  aboutdialog.h  aboutplugin.cpp  aboutplugin.h  resource.qrc  showaboutdialogaction.cpp  showaboutdialogaction.h
plugins/api/: CMakeLists.txt  actionhandler.cpp  actionhandler.h  actionsaction.cpp  actionsaction.h  api.cpp  api.h  api.json.in  apihandler.cpp  apihandler.h  apiplugin.cpp  apiplugin.h  apiserver.cpp  apiserver.h  quitaction.cpp  quitaction.h  resource.qrc  versionaction.cpp  versionaction.h
plugins/autostart/: CMakeLists.txt  autostart.json.in  autostarthelper.cpp  autostarthelper.h  autostartplugin.cpp  autostartplugin.h
plugins/broadcast/: CMakeLists.txt  broadcast.json.in  broadcastdevice.cpp  broadcastdevice.h  broadcastenumerator.cpp  broadcastenumerator.h  broadcastplugin.cpp  broadcastplugin.h
plugins/dev/: CMakeLists.txt  actionswidget.cpp  actionswidget.h  dev.json.in  deviceswidget.cpp  deviceswidget.h  devplugin.cpp  devplugin.h  devwindow.cpp  devwindow.h  showdevwindowaction.cpp  showdevwindowaction.h
plugins/device/: CMakeLists.txt  device.json.in  deviceplugin.cpp  deviceplugin.h  devicesaction.cpp  devicesaction.h
plugins/deviceui/: CMakeLists.txt  browseaction.cpp  browseaction.h  devicedialog.cpp  devicedialog.h  deviceproxymodel.cpp  deviceproxymodel.h  deviceui.json.in  deviceuiplugin.cpp  deviceuiplugin.h  selectdevicedialog.cpp  selectdevicedialog.h  selectdeviceuiaction.cpp  selectdeviceuiaction.h
plugins/filesystem/: CMakeLists.txt  file.cpp  file.h  filehandler.cpp  filehandler.h  filesystem.json.in  filesystemplugin.cpp  filesystemplugin.h  sendaction.cpp  sendaction.h  sendfilesaction.cpp  sendfilesaction.h  senditemsaction.cpp  senditemsaction.h  util.cpp  util.h
plugins/filesystemui/: CMakeLists.txt  acceptfilesdialog.cpp  acceptfilesdialog.h  filesystemui.json.in  filesystemuiplugin.cpp  filesystemuiplugin.h  senddirectoryaction.cpp  senddirectoryaction.h  senddirectoryuiaction.cpp  senddirectoryuiaction.h  sendfilesaction.cpp  sendfilesaction.h  sendfilesuiaction.cpp  sendfilesuiaction.h  senditemsuiaction.cpp  senditemsuiaction.h
plugins/indicator/: CMakeLists.txt  indicatorplugin.cpp  indicatorplugin.h
plugins/lan/: CMakeLists.txt  config.h.in  lan.json.in  lanplugin.cpp  lanplugin.h  lantransport.cpp  lantransport.h  lantransportserver.cpp  lantransportserver.h  server.cpp  server.h
plugins/loggerui/: CMakeLists.txt  logaction.cpp  logaction.h  logdialog.cpp  logdialog.h  loggerui.json.in  loggeruiplugin.cpp  loggeruiplugin.h  showlogdialogaction.cpp  showlogdialogaction.h
plugins/mdns/: CMakeLists.txt  dnsbitmap.cpp  dnsbitmap.h  dnsmessage.cpp  dnsmessage.h  dnsquery.cpp  dnsquery.h  dnsrecord.cpp  dnsrecord.h  dnsutil.cpp  dnsutil.h  mdns.cpp  mdns.h  mdns.json.in  mdnsbitmap.cpp  mdnsbitmap.h  mdnsbroadcaster.cpp  mdnsbroadcaster.h  mdnsdevice.cpp  mdnsdevice.h  mdnsenumerator.cpp  mdnsenumerator.h  mdnsmessage.cpp  mdnsmessage.h  mdnsplugin.cpp  mdnsplugin.h  mdnsquery.cpp  mdnsquery.h  mdnsrecord.cpp  mdnsrecord.h  mdnsserver.cpp  mdnsserver.h  mdnsservice.cpp  mdnsservice.h
plugins/nmh/: CMakeLists.txt  nmh.json.in  nmhplugin.cpp  nmhplugin.h  util.cpp  util.h
plugins/notifications/: CMakeLists.txt  notifications.json.in  notificationsplugin.cpp  notificationsplugin.h  notifier.cpp  notifier.h
plugins/notify/: CMakeLists.txt  notifier.cpp  notify.json.in  notifyplugin.cpp  notifyplugin.h  showlibnotifynotificationaction.cpp  showlibnotifynotificationaction.h
plugins/pluginui/: CMakeLists.txt  managepluginsaction.cpp  managepluginsaction.h  plugindialog.cpp  plugindialog.h  pluginproxymodel.cpp  pluginproxymodel.h  pluginui.json.in  pluginuiplugin.cpp  pluginuiplugin.h
plugins/settingsui/: CMakeLists.txt  booleansettingwidget.cpp  booleansettingwidget.h  pathsettingwidget.cpp  pathsettingwidget.h  settingsaction.cpp  settingsaction.h  settingsdialog.cpp  settingsdialog.h  settingsui.json.in  settingsuiplugin.cpp  settingsuiplugin.h  settingwidget.h  stringlistsettingwidget.cpp  stringlistsettingwidget.h  stringsettingwidget.cpp  stringsettingwidget.h
plugins/sharebox/: CMakeLists.txt  resource.qrc  sharebox.json.in  shareboxplugin.cpp  shareboxplugin.h  shareboxwidget.cpp  shareboxwidget.h
plugins/splash/: CMakeLists.txt  splash.json.in  splashdialog.cpp  splashdialog.h  splashplugin.cpp  splashplugin.h
plugins/static/: CMakeLists.txt  static.json.in  staticdevice.cpp  staticdevice.h  staticenumerator.cpp  staticenumerator.h  staticplugin.cpp  staticplugin.h
plugins/transferui/: CMakeLists.txt  transferdialog.cpp  transferdialog.h  transferdialog.mm  transferproxymodel.cpp  transferproxymodel.h  transfersaction.cpp  transfersaction.h  transferui.json.in  transferuiplugin.cpp  transferuiplugin.h  transferwindow.cpp  transferwindow.h
plugins/tray/: CMakeLists.txt  resource.qrc  showtraynotificationaction.cpp  (+6 more)
shell/: CMakeLists.txt  classfactory.cpp  classfactory.h  contextmenu.cpp  contextmenu.h  nitroshare.cpp  nitroshare.h  nitroshell.cpp  nitroshell.def  nitroshell.h  registry.cpp  registry.h
src/: CMakeLists.txt  Info.plist.in  config.h.in  main.cpp  nitroshare.cpp  nitroshare.h  resource.rc  resource.rc.in  resources.qrc  setup.iss.in  src.pro  util.cpp  util.h
ui/: CMakeLists.txt  config.h.in  main.cpp  resource.rc
(+373 files in other folders)
